Cold data archiving and JDK sensitivity documented